--- a/common.module.css
+++ b/common.module.css
@@ -14,6 +14,22 @@
   border-left: 1px solid #ebeef0;
   overflow-y: auto;
   width: 80%;
-  max-width: calc(100% - 282px);
-  min-width: calc(80% - 282px);
+}
+
+@media screen and (max-width: 700px) {
+  .admin_panel_flex {
+    flex-direction: column !important;
+  }
+  .admin_col_4 {
+    width: 100% !important;
+  }
+}
+
+.header {
+  display: flex;
+  justify-content: flex-end;
+  padding: 1.3vh 2vw;
+  gap: 20px;
+  box-shadow: -4px 9px 6px 1px #ebeff3;
+  background-color: #ebeff3;
 }
